fix: response DTO 만들 때 Stream.toList() 방식으로 변경 및 변수 명 변경